add a notification when squads are added successfully

--- a/src/main/resources/templates/new-squad-success.hbs
+++ b/src/main/resources/templates/new-squad-success.hbs
@@ -1,9 +1,7 @@
-<!--
 {{#partial "title" }}
     Create a squad!
 {{/partial}}
 
-&lt;!&ndash;form.hbs.&ndash;&gt;
 {{#partial "content"}}
 
     <p><a href='/' >Go back.</a></p>
@@ -14,4 +12,4 @@
 
 {{/partial}}
 
-{{> layout.hbs}}-->
+{{> layout.hbs}}
