--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -6,6 +6,7 @@
         <title>{{#block "title"}}Hero Squad{{/block}}
         </title>
         <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+        <link rel="stylesheet" type="text/css" href="/css/styles.css"/>
     </head>
     <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -30,6 +31,10 @@
     {{/block}}
 
 </div>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 <!-- end inner template-->
 {{#block "footer"}}
 
