add a hero form

--- a/src/main/resources/templates/heroes.hbs
+++ b/src/main/resources/templates/heroes.hbs
@@ -4,7 +4,7 @@
 
 {{#partial "content"}}
     <h1>Heroes</h1>
-    {{each heroes}}
+    {{each hero in heroes}}
     <hr/>
     <h3>{{id}}<span>.</span> {{hero-name}}</h3>
     <p>Special Power: {{special-power}}</p>
