--- a/src/main/resources/templates/new-hero-form.hbs
+++ b/src/main/resources/templates/new-hero-form.hbs
@@ -4,6 +4,7 @@
 
 {{#partial "content"}}
 
+    <h1>Create a hero of your choice:</h1>
     <form action="/hero/new" method="post">
         <div class="modal-body">
             <div class="form-group">
