--- a/src/main/resources/templates/hero-detail.hbs
+++ b/src/main/resources/templates/hero-detail.hbs
@@ -1,22 +1,53 @@
-{{#partial "title" }}
-    Hero details!
-{{/partial}}
-
 {{#partial "content"}}
+    <h1>Heroes</h1><br><br>
 
-    {{#if myHero.size}}
-        <p>It currently holds the following Heroes</p>
-        {{#each hero in heros}}
-            <p><a href="/hero/{{id}}">{{hero-name}}</a></p>
-        {{/each}}
-    {{else}}
-        <p>It currently has no Heroes</p>
-    {{/if}}
-    <h1>{{hero-name}}</h1>
-    <p>Age: {{hero-age}}</p>
-    <p>Special Power: {{special-power}}</p>
-    <p>Weakness: {{weakness}}</p>
-    <a href="/hero/delete/{{id}}"><button class="btn btn-outline-danger my-2 my-sm-0">Delete {{hero-name}}</button></a>
+    <div class="row">
+        <div class="col-md-6">
+            {{#if heroes}}
+
+                {{#each heroes }}
+                    <h3>{{name}} </h3>
+                    <a href="/heroes/{{id}}"><button class="btn btn-info btn-md">Details</button></a><br><br><hr>
+
+                {{/each}}
+            {{else}}
+                <p>No Heroes Available!</p>
+            {{/if}}
+
+        </div>
+        <div class="col-md-6">
+            {{#if hero}}
+                <div class="card  text-dark">
+
+                    <div class="card-body">
+                        <h4 class="card-title">{{hero.name}}</h4>
+                        <hr>
+                        <p class="card-text">Age : {{hero.age}}</p><br>
+                        <p class="card-text">Special Powers : {{hero.powers}}</p><br>
+                        <p class="card-text">Weakness: {{hero.weakness}}</p><br>
+                        <p class="card-text">Defence : {{hero.defence}}</p><br>
+                        <p class="card-text">Attack : {{hero.attack}}</p><br>
+                        <p class="card-text">Occupied : {{hero.occupied}}</p><br>
+                        <a href="/hero/{{hero.id}}/delete"><button class="btn btn-danger">Delete Hero</button></a>
+
+
+                    </div>
+                </div>
+            {{/if}}
+
+
+        </div>
+    </div>
+
+
 {{/partial}}
+{{#partial "footer"}}
+    {{#if heroes}}
+        <a href="/heroes/delete"><button class="btn btn-lg btn-danger"> Delete All Heroes</button></a>
+    {{else}}
+    {{/if}}
+{{/partial}}
+
+
 
 {{> layout.hbs}}
