--- a/src/main/resources/templates/squad-details.hbs
+++ b/src/main/resources/templates/squad-details.hbs
@@ -1,63 +1,61 @@
-{{#partial "title" }}
-    Squad details!
-{{/partial}}
-
 {{#partial "content"}}
+    <h1>Squads</h1><br><br>
 
-    <h1>{{name}}</h1>
-    {{#if message}}
-        <p class="addheromessage">{{message}}</p>
-    {{/if}}
+    <div class="row">
+        <div class="col-md-6">
+            {{#if squads}}
 
-    <p>This squad has a maximum capacity of <span class="addheromessage">{{squad-size}}</span> Heroes.</p>
-    {{#if myHero.size}}
-        <p>It currently holds the following Heroes</p>
-        {{#each hero in heros}}
-        <p><a href="/hero/{{id}}">{{hero-name}}</a></p>
-        {{/each}}
-    {{else}}
-    <p>It currently has no Heroes</p>
-    {{/if}}
+                {{#each squads }}
+                    <h4>{{name}} </h4>
+                    <a href="/squads/{{id}}"><button class="btn btn-info btn-md">Details</button></a><br><br><hr>
+                {{/each}}
+            {{else}}
+                <h3>You haven't created any squads!</h3>
+            {{/if}}
 
-<button class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#exampleModal">Add Heros to {{squad-name}} Squad</button>
-<a href="/squad/delete/{{id}}"><button class="btn btn-outline-danger my-2 my-sm-0">Delete {{name}}</button></a>
 
-<div class="modal fade" id="exampleModal" aria-labelledby="exampleModalLabel" aria-hidden="true">https://www.postgresqltutorial.com/postgresql-joins/
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Add Heros</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <form action="/squad/{{id}}/addhero" method="post"><!--name, age, special power and weakness-->
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label for="hero-name">Name of Hero:</label>
-                        <input type="text" name="hero-name" id="hero-name" class="form-control" required="required"/>
-                    </div>
-                    <div class="form-group">
-                        <label for="hero-age">Age of Hero:</label>
-                        <input type="text" name="hero-age" id="hero-age" class="form-control" required="required"/>
-                    </div>
-                    <div class="form-group">
-                        <label for="special-power">Special Powers of Hero:</label>
-                        <input type="text" name="special-power" id="special-power" class="form-control" required="required"/>
-                    </div>
-                    <div class="form-group">
-                        <label for="weakness">Weakness of Hero:</label>
-                        <input type="text" name="weakness" id="weakness" class="form-control" required="required"/>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary">Submit Hero</button>
-                    <button type="button" class="btn btn-secondary btn-right" data-dismiss="modal">Close</button>
-                </div>
-            </form>
         </div>
+        <div class="col-md-6">
+            {{#if squad}}
+                <div class="card  text-dark">
+
+                    <div class="card-body">
+                        <h4 class="card-title">{{squad.name}}  <a href="/squad/{{squad.id}}/delete"><button class="btn
+                        btn-danger">Delete Squad</button></a></h4>
+                        <hr>
+                        <p class="card-text">Max Size : {{squad.maxSize}}</p><br>
+                        <p class="card-text">Cause : {{squad.cause}}</p><br>
+                        <p>Heroes :</p>
+
+
+                        {{#each squad.heroes}}
+                            <hr>
+                            <li class="card-text">{{name}}</li><br>
+                            <hr>
+                            <p class="card-text">Age : {{age}}</p><br>
+                            <p class="card-text">Special Powers : {{powers}}</p><br>
+                            <p class="card-text">Weakness: {{weakness}}</p><br>
+                        {{/each}}
+
+                    </div>
+                </div>
+            {{/if}}
+
+
+        </div>
+
     </div>
-</div>
+
+
+
+
 {{/partial}}
+{{#partial "footer"}}
+    {{#if squads}}
+        <a href="/squads/delete"><button class="btn btn-lg btn-danger"> Delete All Squads</button></a>
+    {{else}}
+    {{/if}}
+{{/partial}}
+
 
 {{> layout.hbs}}
