--- a/src/main/resources/templates/squad-detail.hbs
+++ b/src/main/resources/templates/squad-detail.hbs
@@ -10,7 +10,7 @@
                     <a href="/squads/{{id}}"><button class="btn btn-info btn-md">Details</button></a><br><br><hr>
                 {{/each}}
             {{else}}
-                <h3>You haven't created any squads!</h3>
+                <p>You haven't created any squads!</p>
             {{/if}}
 
 
