--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -10,6 +10,7 @@
                 <a href="/create/hero"><button class="btn btn-success btn-lg">Create Hero</button></a>
                 <a href="/create/squad"><button class="btn btn-success btn-lg">Create Squad</button></a>
 
+                <p>N.B: First enter heroes before squads to be able to assign them.</p>
             </div>
 
 
