add further changes

--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -6,8 +6,9 @@ background-image: url("/images/squad.jpg");
 
 .main-content{
 background-color: blue;
+width: 500px;
+margin-left: 400px;
 }
-
 a{
 color:white;
 }
