--- a/src/main/resources/templates/squad-form.hbs
+++ b/src/main/resources/templates/squad-form.hbs
@@ -6,7 +6,7 @@
             <div class="form">
                 <label for="name">Name</label><br>
                 <input type="text" name="name" id="name"><br>
-                <label for="size">Max size -(Excess heroes will not be added)</label><br>
+                <label for="size">Max size</label><br>
                 <input type="number" name="size" id="size" ><br>
                 <label for="cause">Cause</label><br>
                 <input type="text" name="cause" id="cause"><br>
