--- a/src/main/resources/templates/squad-detail.hbs
+++ b/src/main/resources/templates/squad-detail.hbs
@@ -23,12 +23,12 @@
                         <h4 class="card-title">{{squad.name}}  <a href="/squad/{{squad.id}}/delete"><button class="btn
                         btn-danger">Delete Squad</button></a></h4>
                         <hr>
-                        <p class="card-text">Max Size : {{squad.maxSize}}</p><br>
+                        <p class="card-text">Max Size : {{squad.size}}</p><br>
                         <p class="card-text">Cause : {{squad.cause}}</p><br>
                         <p>Heroes :</p>
 
 
-                        {{#each squad.heroes}}
+                        {{#each squads.heroes}}
                             <hr>
                             <li class="card-text">{{name}}</li><br>
                             <hr>
