add vhanges in app and squad details

--- a/src/main/resources/templates/squad-detail.hbs
+++ b/src/main/resources/templates/squad-detail.hbs
@@ -28,10 +28,8 @@
                         <p>Heroes :</p>
 
 
-                        {{#each squads.heroes}}
-                            <hr>
+                        {{#each squad.heroes}}
                             <li class="card-text">{{name}}</li><br>
-                            <hr>
                             <p class="card-text">Age : {{age}}</p><br>
                             <p class="card-text">Special Powers : {{powers}}</p><br>
                             <p class="card-text">Weakness: {{weakness}}</p><br>
